Add toolbar inline - upload image only

--- a/assets/cobble.styl
+++ b/assets/cobble.styl
@@ -40,3 +40,7 @@ textColor = #444
     &.uploading
       opacity: .2
 
+  .ql-tooltip
+    background-color: transparent
+    color: textColor
+    transform: translate(36vw,-22px)
