Add onload callback on upload image + clear timeout tooltip

--- a/assets/cobble.styl
+++ b/assets/cobble.styl
@@ -37,6 +37,8 @@ textColor = #444
   .ql-blockTitle
     min-height: 36px
   .ql-blockImage
+    position: relative
+    z-index: 1
     &.uploading
       opacity: .2
 
