Minor css changes cobble theme

--- a/assets/cobble.styl
+++ b/assets/cobble.styl
@@ -13,9 +13,20 @@ textColor = #444
   a
     color: activeColor
 
-  &.ql-toolbar
-    border: solid borderColor
-    border-width: 1px 0
+  &.ql-container
+    font-size: 16px
+  .ql-editor
+    line-height: 1.6
+  .ql-toolbar
+    .ql-image
+      border: 1px solid #eee
+      border-radius: 2px
+      margin-top: -4px
+      height: 30px
+      width: 28px
+      padding: 6px 0
+      svg
+        float: none
 
   [data-placeholder]
     &.empty
