Add more line spacing between paragraphs

--- a/assets/cobble.styl
+++ b/assets/cobble.styl
@@ -16,6 +16,11 @@ textColor = #444
     font-size: 16px
   .ql-editor
     line-height: 1.6
+    & > p
+      padding: 0 0 8px
+      line-height: 1.2
+    &.ql-blank:before
+      top: 5px
   .ql-toolbar
     .ql-image
       border: 1px solid #eee
